fix small style issue: scrollbar when switch tab

--- a/mCotton2/client/main.scss
+++ b/mCotton2/client/main.scss
@@ -59,3 +59,13 @@ container { // temp: will be component later
 		}
 	}
 }
+
+#SwipeableViews {
+	overflow: hidden;
+	> div {
+		overflow: visible;
+		> * {
+			overflow: visible !important;
+		}
+	}
+}
